--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,6 +4,9 @@
         android:id="@+id/group_chat"
         android:title="Group Chat"    />
     <item
+        android:id="@+id/women_safety"
+        android:title="Women Safety"/>
+    <item
         android:id="@+id/settings"
         android:title="Settings"   />
     <item
