--- a/app/src/main/res/layout/receiver_chat_sample.xml
+++ b/app/src/main/res/layout/receiver_chat_sample.xml
@@ -6,30 +6,42 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginLeft="5dp"
+    android:layout_marginTop="4dp"
     android:layout_marginEnd="7dp"
     android:layout_marginRight="7dp"
     android:background="@drawable/bg_receiver"
     android:maxWidth="310dp"
-    android:maxHeight="400dp"
-    android:layout_marginTop="4dp">
+    android:maxHeight="400dp">
 
-    <TextView
-        android:id="@+id/receiverText"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="3dp"
-        android:inputType="textLongMessage|textImeMultiLine"
-        android:maxWidth="270dp"
-        android:minWidth="50dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/receiverTime"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imagereceive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:visibility="gone"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/receiverText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="3dp"
+            android:inputType="textLongMessage|textImeMultiLine"
+            android:maxWidth="270dp"
+            android:minWidth="50dp"
+            android:text="TextView"
+            tools:ignore="MissingConstraints" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/receiverTime"
@@ -47,5 +59,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp" />
+        app:layout_constraintGuide_percent="0.11594203" />
 </androidx.constraintlayout.widget.ConstraintLayout>
