--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,9 +15,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-
         android:orientation="vertical">
-
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="100dp"
@@ -49,6 +47,17 @@
             android:hint="E-mail"
             android:inputType="textEmailAddress"
             android:padding="9dp" />
+
+        <EditText
+            android:id="@+id/signup_phone_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/white"
+            android:ems="10"
+            android:hint="Phone"
+            android:paddingStart="9dp" />
 
         <EditText
             android:id="@+id/signup_password"
@@ -117,6 +126,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:gravity="center"
             android:text="Sign Up Using Phone"
             android:textColor="@color/colorPrimary"
