--- a/app/src/main/res/layout/show_user.xml
+++ b/app/src/main/res/layout/show_user.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
+
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
@@ -15,7 +17,7 @@
         app:civ_border_width="2dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="249dp"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
@@ -37,6 +39,16 @@
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:text="Chat" />
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/callaudiochat"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        app:srcCompat="@drawable/ic_call" />
+
+
 
 </LinearLayout>
